[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/DialogueUI.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/main_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/dialogue_background.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("DialoguePanel:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 400 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DialoguePanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("DialoguePanel:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Vector2( 0, 400 ), Vector2( 0, 600 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DialoguePanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="DialogueUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DialoguePanel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = 400.0
margin_right = 512.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="DialoguePanel"]
modulate = Color( 0.2, 0.2, 0.25, 0.9 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCInfo" type="HBoxContainer" parent="DialoguePanel"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCPortrait" type="TextureRect" parent="DialoguePanel/NPCInfo"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCName" type="Label" parent="DialoguePanel/NPCInfo"]
margin_left = 64.0
margin_top = 18.0
margin_right = 984.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Nombre del NPC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueContent" type="VBoxContainer" parent="DialoguePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 90.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel/DialogueContent"]
margin_right = 984.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Texto del diálogo..."
text = "Texto del diálogo..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerChoices" type="VBoxContainer" parent="DialoguePanel/DialogueContent"]
margin_top = 44.0
margin_right = 984.0
margin_bottom = 44.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="DialoguePanel/DialogueContent"]
margin_top = 48.0
margin_right = 984.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Continuar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dialogue_appear = SubResource( 1 )
anims/dialogue_disappear = SubResource( 2 )

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="TypingSound" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[connection signal="timeout" from="TypingTimer" to="." method="_on_typing_timer_timeout"]